--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ply-ct/ply-demo",
-  "version": "3.0.39",
+  "version": "3.0.40",
   "description": "Illustrate Ply automated testing",
   "license": "MIT",
   "repository": {
@@ -27,14 +27,14 @@
     "stop-movies": "run-script-os",
     "stop-movies:default": "ply-movies stop -p $npm_package_config_port",
     "stop-movies:windows": "ply-movies stop -p %npm_package_config_port%",
-    "ply": "ply",
+    "ply": "ply --trusted",
     "pretest": "npm run start-movies",
     "test": "npm-run-all ply stop-movies --continue-on-error",
     "load-test-sequential": "ply test/flows/rowwise-movies-api.ply.flow --valuesFiles=\"test/values/localhost.json,test/values/forties-movies.xlsx\"",
-    "load-test-parallel": "ply test/flows/rowwise-movies-api.ply.flow --valuesFiles=\"test/values/localhost.json,test/values/forties-movies.csv\" --submit --parallel --quiet"
+    "load-test-parallel": "ply test/flows/rowwise-movies-api.ply.flow --valuesFiles=\"test/values/localhost.json,test/values/forties-movies.csv\" --submit --parallel --quiet --reporter=csv"
   },
   "devDependencies": {
-    "@ply-ct/ply": "^3.0.39",
+    "@ply-ct/ply": "^3.0.40",
     "@ply-ct/ply-movies": "^1.1.10",
     "@types/chai": "^4.3.0",
     "@types/express": "^4.17.13",
