--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ply-ct/ply-demo",
-  "version": "3.0.41",
+  "version": "3.0.42",
   "description": "Illustrate Ply automated testing",
   "license": "MIT",
   "repository": {
@@ -31,11 +31,13 @@
     "pretest": "npm run start-movies",
     "test": "npm-run-all ply stop-movies --continue-on-error",
     "load-test-sequential": "ply test/flows/rowwise-movies-api.ply.flow --valuesFiles=\"test/values/localhost.json,test/values/forties-movies.xlsx\"",
-    "load-test-parallel": "ply test/flows/rowwise-movies-api.ply.flow --valuesFiles=\"test/values/localhost.json,test/values/forties-movies.csv\" --submit --parallel --quiet --reporter=csv"
+    "load-test-parallel": "ply test/flows/rowwise-movies-api.ply.flow --valuesFiles=\"test/values/localhost.json,test/values/forties-movies.csv\" --submit --parallel --quiet --reporter=csv",
+    "html-report": "ply --report=node_modules/@ply-ct/ply-viz#html -o load-test-results.html"
   },
   "devDependencies": {
-    "@ply-ct/ply": "^3.0.41",
+    "@ply-ct/ply": "^3.0.42",
     "@ply-ct/ply-movies": "^1.1.10",
+    "@ply-ct/ply-viz": "^0.1.0",
     "@types/chai": "^4.3.0",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.7",
