--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ply-ct/ply-demo",
-  "version": "3.0.42",
+  "version": "3.0.43",
   "description": "Illustrate Ply automated testing",
   "license": "MIT",
   "repository": {
@@ -27,7 +27,7 @@
     "stop-movies": "run-script-os",
     "stop-movies:default": "ply-movies stop -p $npm_package_config_port",
     "stop-movies:windows": "ply-movies stop -p %npm_package_config_port%",
-    "ply": "ply --trusted",
+    "ply": "ply --trusted --reporter=json --outputFile=test/results/actual/ply-results.json",
     "pretest": "npm run start-movies",
     "test": "npm-run-all ply stop-movies --continue-on-error",
     "load-test-sequential": "ply test/flows/rowwise-movies-api.ply.flow --valuesFiles=\"test/values/localhost.json,test/values/forties-movies.xlsx\"",
@@ -35,7 +35,7 @@
     "html-report": "ply --report=node_modules/@ply-ct/ply-viz#html -o load-test-results.html"
   },
   "devDependencies": {
-    "@ply-ct/ply": "^3.0.42",
+    "@ply-ct/ply": "^3.0.43",
     "@ply-ct/ply-movies": "^1.1.10",
     "@ply-ct/ply-viz": "^0.1.0",
     "@types/chai": "^4.3.0",
