--- a/test/results/expected/flows/tmdb-movies.yaml
+++ b/test/results/expected/flows/tmdb-movies.yaml
@@ -24,7 +24,7 @@ Create Movie:
         "title": "The Mummy's Hand",
         "rating": 3,
         "description": "A couple of young, out-of-work archaeologists in Egypt discover evidence of the burial place of the ancient Egyptian princess Ananka. After receiving funding from an eccentric magician and his beautiful daughter, they set out into the desert only to be terrorized by a sinister high priest and the living mummy Kharis who are the guardians of Ananka’s tomb.",
-        "poster": "/jSSdvLkGXy4oICnSo5Cnz12B6Ae.jpg",
+        "poster": "/${~.*}.jpg",
         "webRef": {
           "site": "themoviedb.org",
           "ref": "31498"
@@ -118,7 +118,7 @@ Create Movie_2:
         "title": "The Invisible Man Returns",
         "rating": 3,
         "description": "The owner of a coal mining operation, falsely imprisoned for fratricide, takes a drug to make him invisible, despite its side effect: gradual madness.",
-        "poster": "/aRTinROsOFuy9cepIAd9iauV7nc.jpg",
+        "poster": "/${~.*}.jpg",
         "webRef": {
           "site": "themoviedb.org",
           "ref": "28421"
@@ -135,7 +135,7 @@ Create Movie_2:
       {
         "description": "The owner of a coal mining operation, falsely imprisoned for fratricide, takes a drug to make him invisible, despite its side effect: gradual madness.",
         "id": "660bd502",
-        "poster": "/aRTinROsOFuy9cepIAd9iauV7nc.jpg",
+        "poster": "/${~.*}.jpg",
         "rating": 3,
         "title": "The Invisible Man Returns",
         "webRef": {
@@ -191,7 +191,7 @@ Get Newly Added Movies:
           {
             "description": "The owner of a coal mining operation, falsely imprisoned for fratricide, takes a drug to make him invisible, despite its side effect: gradual madness.",
             "id": "660bd502",
-            "poster": "/aRTinROsOFuy9cepIAd9iauV7nc.jpg",
+            "poster": "/${~.*}.jpg",
             "rating": 3,
             "title": "The Invisible Man Returns",
             "webRef": {
