--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -13,7 +13,9 @@ jobs:
   build-test:
     runs-on: ubuntu-latest
     env:
-      PLY_VALUES: ${{ secrets.PLY_VALUES }}
+      PLY_VALUES: ${{ secrets.PLY_VALUES }} # override baseUrl
+      GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+      TMDB_KEY: ${{ secrets.TMDB_KEY }}
       FORCE_COLOR: 'true'
     steps:
     - uses: actions/checkout@v3
@@ -24,7 +26,7 @@ jobs:
     - run: npx ply --version
     - run: npm test
     - name: ply
-      uses: ply-ct/ply-action@v2
+      uses: ply-ct/ply-action@v2.3
       with:
         result-file: test/results/actual/ply-results.json
 
