--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ply-ct/ply-demo",
-  "version": "3.0.48",
+  "version": "3.0.51",
   "description": "Illustrate Ply automated testing",
   "license": "MIT",
   "repository": {
@@ -35,18 +35,18 @@
     "html-report": "ply --report=node_modules/@ply-ct/ply-viz#html -o load-test-results.html"
   },
   "devDependencies": {
-    "@ply-ct/ply": "^3.0.48",
-    "@ply-ct/ply-movies": "^1.1.10",
+    "@ply-ct/ply": "^3.0.51",
     "@ply-ct/ply-viz": "^0.1.0",
-    "@types/chai": "^4.3.0",
-    "@types/express": "^4.17.13",
-    "@types/node": "^16.11.7",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
-    "chai": "^4.3.6",
-    "eslint": "^8.12.0",
+    "@types/chai": "^4.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
+    "chai": "^4.3.7",
+    "eslint": "^8.30.0",
     "npm-run-all": "^4.1.5",
     "run-script-os": "^1.1.6",
-    "typescript": "^4.8.3"
+    "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "@ply-ct/ply-movies": "^1.2.1"
   }
 }
