--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,10 @@
     "resolveJsonModule": true,
     "outDir": "dist",
     "declaration": true,
-    "noUnusedLocals": false,
     "sourceMap": true,
     "strict": true,
-    "allowJs": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "skipLibCheck": true
   },
   "exclude": [
     "dist",
