--- a/test/requests/github-api.ply.yaml
+++ b/test/requests/github-api.ply.yaml
@@ -3,6 +3,7 @@ repositoryTopics:
   url: https://api.github.com/repos/${github.organization}/${github.repository}/topics
   method: GET
   headers:
+    Authorization: Bearer ${github.token}
     Accept: application/vnd.github.mercy-preview+json
 
 # GraphQL query
