--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -28,5 +28,8 @@ jobs:
     - run: npm run start-movies
     - name: ply
       uses: ply-ct/ply-action@v2.3
+      with:
+        ply-path: node_modules/@ply-ct/ply
+
     - run: npm run stop-movies
 
