--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ply-ct/ply-demo",
-  "version": "3.0.55",
+  "version": "3.0.56",
   "description": "Illustrate Ply automated testing",
   "license": "MIT",
   "repository": {
@@ -35,8 +35,6 @@
     "html-report": "ply --report=node_modules/@ply-ct/ply-viz#html -o load-test-results.html"
   },
   "devDependencies": {
-    "@ply-ct/ply": "^3.0.55",
-    "@ply-ct/ply-viz": "^0.1.0",
     "@types/chai": "^4.3.4",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
@@ -47,6 +45,10 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@ply-ct/ply": "^3.0.56",
     "@ply-ct/ply-movies": "^1.2.1"
+  },
+  "optionalDependencies": {
+    "@ply-ct/ply-viz": "^0.1.0"
   }
 }
