--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint": "^8.30.0",
     "npm-run-all": "^4.1.5",
     "run-script-os": "^1.1.6",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
