--- a/test/results/expected/requests/tmdb-discover.yaml
+++ b/test/results/expected/requests/tmdb-discover.yaml
@@ -17,7 +17,6 @@ TMDB Universal Horror:
             "adult": false,
             "backdrop_path": "/s9fkuABRgvo4ovWft8O4ywdtlRB.jpg",
             "genre_ids": [
-              18,
               27,
               9648,
               878,
@@ -48,7 +47,7 @@ TMDB Universal Horror:
             "original_title": "Black Friday",
             "overview": "University professor George Kingsley is struck by gangsters while crossing the street, leaving him with brain damage and one of the gangsters, Cannon, paralyzed. Kingsley's friend Dr. Sovac attends to both men, and when Cannon offers him a reward for aiding his recovery, Kovac transplants part of Cannon's brain into the dying Kingsley's skull, creating a dual personality.",
             "popularity": ${~.*},
-            "poster_path": "/268GiPoyYmuNhrez1I7GXypKC6T.jpg",
+            "poster_path": "/${~.*}.jpg",
             "release_date": "1940-02-29",
             "title": "Black Friday",
             "video": false,
@@ -68,7 +67,7 @@ TMDB Universal Horror:
             "original_title": "The Mummy's Hand",
             "overview": "A couple of young, out-of-work archaeologists in Egypt discover evidence of the burial place of the ancient Egyptian princess Ananka. After receiving funding from an eccentric magician and his beautiful daughter, they set out into the desert only to be terrorized by a sinister high priest and the living mummy Kharis who are the guardians of Ananka’s tomb.",
             "popularity": ${~.*},
-            "poster_path": "/jSSdvLkGXy4oICnSo5Cnz12B6Ae.jpg",
+            "poster_path": "/${~.*}.jpg",
             "release_date": "1940-09-20",
             "title": "The Mummy's Hand",
             "video": false,
