--- a/plyconfig.yaml
+++ b/plyconfig.yaml
@@ -7,10 +7,12 @@ valuesFiles:
   - test/values/global.json
   - test/values/ply-ct.json
   # - test/values/localhost.json
+
   # await vscode-ply 3.0 for enableable values files
   # test/values/global.json: true
   # test/values/ply-ct.json: true
   # test/values/localhost.json: false
+  # test/values/local-docker.json: false
   # test/values/forties-movies.csv: false
   # test/values/forties-movies.xlsx: false
 
