--- a/test/results/expected/requests/create-movie.yaml
+++ b/test/results/expected/requests/create-movie.yaml
@@ -78,10 +78,10 @@ Create Movie:
         ],
         "id": "4fba651b",
         "poster": "mg.jpg",
-        "title": "The Mad Genius",
+        "title": "${newMovie.title}",
         "webRef": {
           "ref": "tt0022103",
           "site": "imdb.com"
         },
-        "year": 1931
+        "year": ${year}
       }
