--- a/plyconfig.yaml
+++ b/plyconfig.yaml
@@ -1,19 +1,15 @@
 testsLocation: test
 
 # movies-api.ply.yaml is for programmatic cases
-skip: '{requests/movies-api.ply.yaml,requests/form-data.ply,requests/create-movie-xml.ply,requests/rowwise-requests.ply.yaml,flows/rowwise-movies-api.ply.flow}'
+# ignoring get-movie-by-title.ply until ply issue #83
+skip: '{requests/get-movie-by-title.ply,requests/movies-api.ply.yaml,requests/form-data.ply,requests/create-movie-xml.ply,requests/rowwise-requests.ply.yaml,flows/rowwise-movies-api.ply.flow}'
 
 valuesFiles:
-  - test/values/global.json
-  - test/values/ply-ct.json
-  # - test/values/localhost.json
-
-  # await vscode-ply 3.0 for enableable values files
-  # test/values/global.json: true
-  # test/values/ply-ct.json: true
-  # test/values/localhost.json: false
-  # test/values/local-docker.json: false
-  # test/values/forties-movies.csv: false
-  # test/values/forties-movies.xlsx: false
+  test/values/global.json: true
+  test/values/ply-ct.json: false
+  test/values/localhost.json: true
+  test/values/local-docker.json: false
+  test/values/forties-movies.csv: false
+  test/values/forties-movies.xlsx: false
 
 outputFile: test/results/actual/ply-results.json
