--- a/test/results/expected/requests/get-movie-by-title.yaml
+++ b/test/results/expected/requests/get-movie-by-title.yaml
@@ -1,6 +1,6 @@
 Get Movie by Title:
   request:
-    url: ${baseUrl}/movies?title=Dracula
+    url: ${baseUrl}/movies?title=${title}
     method: GET
     headers:
       Accept: application/json
@@ -44,7 +44,7 @@ Get Movie by Title:
             "id": "269b34c1",
             "poster": "drac.jpg",
             "rating": 5,
-            "title": "Dracula",
+            "title": "${title}",
             "webRef": {
               "ref": "tt0021814",
               "site": "imdb.com"
