--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "stop-movies": "run-script-os",
     "stop-movies:default": "ply-movies stop -p $npm_package_config_port",
     "stop-movies:windows": "ply-movies stop -p %npm_package_config_port%",
-    "ply": "ply --trusted --reporter=json --outputFile=test/results/actual/ply-results.json",
+    "ply": "ply --trusted --values title=\"Bride of Frankenstein\" --reporter=json --outputFile=test/results/actual/ply-results.json",
     "pretest": "npm run start-movies",
     "test": "npm-run-all ply stop-movies --continue-on-error",
     "load-test-sequential": "ply test/flows/rowwise-movies-api.ply.flow --valuesFiles=\"test/values/localhost.json,test/values/forties-movies.xlsx\"",
