--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ply-ct/ply-demo",
-  "version": "3.2.10",
+  "version": "3.2.13",
   "description": "Illustrate Ply automated testing",
   "license": "MIT",
   "repository": {
@@ -35,6 +35,7 @@
     "html-report": "ply --report=node_modules/@ply-ct/ply-viz#html -o load-test-results.html"
   },
   "devDependencies": {
+    "@ply-ct/ply-movies": "^1.2.4",
     "@types/chai": "^4.3.4",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
@@ -46,8 +47,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@ply-ct/ply": "^3.2.10",
-    "@ply-ct/ply-movies": "^1.2.4"
+    "@ply-ct/ply": "^3.2.13"
   },
   "optionalDependencies": {
     "@ply-ct/ply-viz": "^0.1.0"
