--- a/test/results/expected/flows/tmdb-movies.yaml
+++ b/test/results/expected/flows/tmdb-movies.yaml
@@ -21,6 +21,53 @@ Create Movie:
     body: |-
       {
         "year": 1940,
+        "title": "The Invisible Woman",
+        "rating": 3,
+        "description": "Kitty Carroll, an attractive store model, volunteers to become a test subject for a machine that will make her invisible so that she can use her invisibility to exact revenge on her ex-boss.",
+        "poster": "/${~.*}.jpg",
+        "webRef": {
+          "site": "themoviedb.org",
+          "ref": "28423"
+        }
+      }
+  response:
+    status:
+      code: 201
+      message: Created
+    headers:
+      content-type: application/json; charset=utf-8
+      location: ${baseUrl}/movies/5de71bbd
+    body: |-
+      {
+        "description": "Kitty Carroll, an attractive store model, volunteers to become a test subject for a machine that will make her invisible so that she can use her invisibility to exact revenge on her ex-boss.",
+        "id": "5de71bbd",
+        "poster": "/${~.*}.jpg",
+        "rating": 3,
+        "title": "The Invisible Woman",
+        "webRef": {
+          "ref": "28423",
+          "site": "themoviedb.org"
+        },
+        "year": 1940
+      }
+  status: Completed
+Done?_1:
+  id: s4
+  status: Completed
+Next Movie_1:
+  id: s6
+  status: Completed
+Create Movie_1:
+  id: s5
+  request:
+    url: ${baseUrl}/movies
+    method: POST
+    headers:
+      Accept: application/json
+      Content-Type: application/json
+    body: |-
+      {
+        "year": 1940,
         "title": "The Mummy's Hand",
         "rating": 3,
         "description": "A couple of young, out-of-work archaeologists in Egypt discover evidence of the burial place of the ancient Egyptian princess Ananka. After receiving funding from an eccentric magician and his beautiful daughter, they set out into the desert only to be terrorized by a sinister high priest and the living mummy Kharis who are the guardians of Ananka’s tomb.",
@@ -41,7 +88,7 @@ Create Movie:
       {
         "description": "A couple of young, out-of-work archaeologists in Egypt discover evidence of the burial place of the ancient Egyptian princess Ananka. After receiving funding from an eccentric magician and his beautiful daughter, they set out into the desert only to be terrorized by a sinister high priest and the living mummy Kharis who are the guardians of Ananka’s tomb.",
         "id": "648e2964",
-        "poster": "/jSSdvLkGXy4oICnSo5Cnz12B6Ae.jpg",
+        "poster": "/${~.*}.jpg",
         "rating": 3,
         "title": "The Mummy's Hand",
         "webRef": {
@@ -51,13 +98,13 @@ Create Movie:
         "year": 1940
       }
   status: Completed
-Done?_1:
+Done?_2:
   id: s4
   status: Completed
-Next Movie_1:
+Next Movie_2:
   id: s6
   status: Completed
-Create Movie_1:
+Create Movie_2:
   id: s5
   request:
     url: ${baseUrl}/movies
@@ -98,13 +145,13 @@ Create Movie_1:
         "year": 1940
       }
   status: Completed
-Done?_2:
+Done?_3:
   id: s4
   status: Completed
-Next Movie_2:
+Next Movie_3:
   id: s6
   status: Completed
-Create Movie_2:
+Create Movie_3:
   id: s5
   request:
     url: ${baseUrl}/movies
@@ -145,7 +192,7 @@ Create Movie_2:
         "year": 1940
       }
   status: Completed
-Done?_3:
+Done?_4:
   id: s4
   status: Completed
 Get Newly Added Movies:
@@ -164,6 +211,18 @@ Get Newly Added Movies:
     body: |-
       {
         "movies": [
+          {
+            "description": "Kitty Carroll, an attractive store model, volunteers to become a test subject for a machine that will make her invisible so that she can use her invisibility to exact revenge on her ex-boss.",
+            "id": "5de71bbd",
+            "poster": "/${~.*}.jpg",
+            "rating": 3,
+            "title": "The Invisible Woman",
+            "webRef": {
+              "ref": "28423",
+              "site": "themoviedb.org"
+            },
+            "year": 1940
+          },
           {
             "description": "A couple of young, out-of-work archaeologists in Egypt discover evidence of the burial place of the ancient Egyptian princess Ananka. After receiving funding from an eccentric magician and his beautiful daughter, they set out into the desert only to be terrorized by a sinister high priest and the living mummy Kharis who are the guardians of Ananka’s tomb.",
             "id": "648e2964",
@@ -191,7 +250,7 @@ Get Newly Added Movies:
           {
             "description": "The owner of a coal mining operation, falsely imprisoned for fratricide, takes a drug to make him invisible, despite its side effect: gradual madness.",
             "id": "660bd502",
-            "poster": "/${~.*}.jpg",
+            "poster": "/hJmmgKnY0NaJKVP7Glb4ciAzXWr.jpg",
             "rating": 3,
             "title": "The Invisible Man Returns",
             "webRef": {
