--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -17,10 +17,10 @@ jobs:
       TMDB_KEY: ${{ secrets.TMDB_KEY }}
       FORCE_COLOR: 'true'
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
       with:
-        node-version: '16.x'
+        node-version: '18'
     - run: |
         npm install
         npm run build
