--- a/plyconfig.yaml
+++ b/plyconfig.yaml
@@ -6,8 +6,8 @@ skip: '{requests/get-movie-by-title.ply,requests/movies-api.ply.yaml,requests/fo
 
 valuesFiles:
   test/values/global.json: true
-  test/values/ply-ct.json: true
-  test/values/localhost.json: false
+  test/values/ply-ct.json: false
+  test/values/localhost.json: true
   test/values/local-docker.json: false
   test/values/forties-movies.csv: false
   test/values/forties-movies.xlsx: false
