--- a/test/results/expected/requests/tmdb-discover.yaml
+++ b/test/results/expected/requests/tmdb-discover.yaml
@@ -26,27 +26,27 @@ TMDB Universal Horror:
             "original_language": "en",
             "original_title": "The Invisible Man Returns",
             "overview": "The owner of a coal mining operation, falsely imprisoned for fratricide, takes a drug to make him invisible, despite its side effect: gradual madness.",
-            "popularity": 34.058,
+            "popularity": ${~.*},
             "poster_path": "/hJmmgKnY0NaJKVP7Glb4ciAzXWr.jpg",
             "release_date": "1940-01-12",
             "title": "The Invisible Man Returns",
             "video": false,
-            "vote_average": 6.2,
-            "vote_count": 116
+            "vote_average": ${~.*},
+            "vote_count": ${~.*}
           },
           {
             "adult": false,
             "backdrop_path": "/qqn5yDwWZcgJcVeL2Yt1Krn0xX8.jpg",
             "genre_ids": [
-              80,
-              27,
-              878
+              ${~.*},
+              ${~.*},
+              ${~.*}
             ],
             "id": 13784,
             "original_language": "en",
             "original_title": "Black Friday",
             "overview": "University professor George Kingsley is struck by gangsters while crossing the street, leaving him with brain damage and one of the gangsters, Cannon, paralyzed. Kingsley's friend Dr. Sovac attends to both men, and when Cannon offers him a reward for aiding his recovery, Kovac transplants part of Cannon's brain into the dying Kingsley's skull, creating a dual personality.",
-            "popularity": 7.354,
+            "popularity": ${~.*},
             "poster_path": "/268GiPoyYmuNhrez1I7GXypKC6T.jpg",
             "release_date": "1940-02-29",
             "title": "Black Friday",
@@ -66,12 +66,12 @@ TMDB Universal Horror:
             "original_language": "en",
             "original_title": "The Mummy's Hand",
             "overview": "A couple of young, out-of-work archaeologists in Egypt discover evidence of the burial place of the ancient Egyptian princess Ananka. After receiving funding from an eccentric magician and his beautiful daughter, they set out into the desert only to be terrorized by a sinister high priest and the living mummy Kharis who are the guardians of Ananka’s tomb.",
-            "popularity": 19.6,
+            "popularity": ${~.*},
             "poster_path": "/jSSdvLkGXy4oICnSo5Cnz12B6Ae.jpg",
             "release_date": "1940-09-20",
             "title": "The Mummy's Hand",
             "video": false,
-            "vote_average": 5.756,
+            "vote_average": ${~.*},
             "vote_count": 88
           },
           {
@@ -86,13 +86,13 @@ TMDB Universal Horror:
             "original_language": "en",
             "original_title": "The Invisible Woman",
             "overview": "Kitty Carroll, an attractive store model, volunteers to become a test subject for a machine that will make her invisible so that she can use her invisibility to exact revenge on her ex-boss.",
-            "popularity": 31.1,
+            "popularity": ${~.*},
             "poster_path": "/ix2JkOviYalRWVX2iBA6Xxn878V.jpg",
             "release_date": "1940-12-28",
             "title": "The Invisible Woman",
             "video": false,
             "vote_average": 5.7,
-            "vote_count": 68
+            "vote_count": ${~.*}
           }
         ],
         "total_pages": 1,
